k8s/deployment/front-end.yaml
apiVersion: v1
kind: Service
metadata:
  name: front-end-service
spec:
  selector:
    app: front-end
  ports:
    - name: http
      port: 3003
      targetPort: 3003
  clusterIP: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-end-deployment
  labels:
    app: front-end
spec:
  replicas: 1
  selector:
    matchLabels:
      app: front-end
  template:
    metadata:
      labels:
        app: front-end
    spec:
      containers:
      - name: front-end
        image: huynhthanhdat1108/front-end:latest
        ports:
          - containerPort: 3000
