k8s/deployment/ion-sfu.yaml
apiVersion: v1
kind: Service
metadata:
  name: ion-sfu-service
spec:
  selector:
    app: ion-sfu
  ports:
    - name: icemux-tcp
      protocol:  TCP
      port: 5000
      targetPort: 5000
    - name: icemux-udp
      protocol:  UDP
      port: 5000
      targetPort: 5000
  #type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ion-sfu-deployment
  labels:
    app: ion-sfu
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ion-sfu
  template:
    metadata:
      labels:
        app: ion-sfu
    spec:
      containers:
      - name: ion-sfu
        image: huynhthanhdat1108/ion-sfu:latest
        ports:
          - containerPort: 5000
        volumeMounts:
          - name: config-files
            mountPath: /configs
            readOnly: true
      volumes:
        - name: config-files
          configMap:
            name: config-files
            items:
              - key: sfu.toml
                path: sfu.toml
