k8s/deployment/grpc-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/enable-directory-listing: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/grpc-backend: "true"
spec:
spec:
  rules:
    - http: 
        paths:
          - path: /controller-grpc(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: controller-service
                port:
                  number: 5551
