k8s/deployment/ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: hcmut-thesis-gateway.com
      http:
        paths:
          - path: /api-server
            pathType: Prefix
            backend:
              service:
                name: node-api-server
                port:
                  number: 8080
          - path: /controller
            pathType: Prefix
            backend:
              service:
                name: node-api-server
                port:
                  number: 8080
