k8s/deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/enable-directory-listing: "true"
spec:
  rules:
    - host: controller-gateway.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: controller-service
                port:
                  number: 8080
