k8s/deployment/root-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: http-ingress
  annotations:
    nginx.ingress.kubernetes.io/enable-directory-listing: "true"
spec:
spec:
  rules:
    - host: rancher.smartss.click
      - http: 
          paths:
            - path: /controller(/|$)(.*)
              pathType: Prefix
              backend:
                service:
                  name: controller-service
                  port:
                    number: 8080

            - path: /api-gateway(/|$)(.*)
              pathType: Prefix
              backend:
                service:
                  name: node-api-server-service
                  port:
                    number: 3001
            
            - path: /front-end(/|$)(.*)
              pathType: Prefix
              backend:
                service:
                  name: front-end-service
                  port:
                    number: 3000
